# rust-redis-desktop

./: .gitignore  CHANGELOG.md  Cargo.toml  Info.plist  Info.plist.sparkle  LICENSE  README.md  appcast.xml  build.rs  entitlements.plist  update.json
.github/workflows/: release.yml
Assets/: AppIcon.icns
docs/: ARCHITECTURE.md  PERFORMANCE.md  PROGRESS.md  SECRETS.md  TEST_SAVE_CONNECTION.md
docs/plans/: 2025-03-21-redis-gui-enhancements.md  2026-03-20-connection-management.md  2026-03-20-data-editor.md  2026-03-20-empty-key-selection-fix.md  2026-03-20-hash-table-design.md  2026-03-20-hash-table.md  2026-03-20-key-browser.md  2026-03-22-key-list-priority-layout-design.md  2026-03-22-key-list-priority-layout.md  2026-03-22-light-theme-design.md  2026-03-22-light-theme.md  2026-03-22-redis-engine-workbench-design.md  2026-03-22-redis-engine-workbench.md  2026-03-23-tokyo-night-theme-design.md  2026-03-23-tokyo-night-theme.md  2026-03-24-native-titlebar-theme-design.md  2026-03-24-native-titlebar-theme.md  2026-03-24-transparent-titlebar-design.md  2026-03-24-transparent-titlebar.md  2026-03-25-context-menu-instance-fix-design.md  2026-03-25-context-menu-instance-fix.md  2026-03-25-dialog-titlebar-unification-design.md  2026-03-25-dialog-titlebar-unification.md  2026-03-25-memory-analysis-dialog-design.md  2026-03-25-memory-analysis-dialog.md  2026-03-26-value-parsing-enhancement-design.md  2026-03-26-virtual-tree-list.md  2026-04-02-error-handling-implementation.md  2026-04-02-error-handling-refactor-design.md  2026-04-03-app-rs-refactor-design.md  2026-04-03-app-rs-refactor.md  2026-04-03-value-viewer-refactor-design.md  2026-04-03-value-viewer-refactor.md
scripts/: build-app.sh  build-linux.sh  create-dmg.sh  generate-appcast.sh  generate-sparkle-keys.sh  generate-update-manifest.sh  generate_keys_python.py  generate_test_keys.sh  installer.nsi  setup-sparkle.sh  sign-dmg-sparkle.sh  sign_update_python.py  test_compat.sh  test_config_save.sh
src/: error.rs  error_reporting.rs  lib.rs  main.rs  startup.rs  tray.rs
src/autostart/: linux.rs  macos.rs  mod.rs  windows.rs
src/config/: storage.rs
src/connection/: config.rs  error.rs  manager.rs  mod.rs  pool.rs  ssh_tunnel.rs
src/crypto/: encryption.rs
src/formatter/: custom.rs  mod.rs  preset.rs
src/i18n/: en.rs  mod.rs  zh_cn.rs
src/protobuf_schema/: mod.rs  parser.rs  registry.rs  types.rs
src/redis/: cluster.rs  command_docs.rs  commands.rs  mod.rs  search.rs  tree.rs  types.rs
src/serialization/: bson.rs  cbor.rs  java.rs  java_converters.rs  kryo.rs  mod.rs  msgpack.rs  php.rs  pickle.rs  protobuf.rs  types.rs
src/tests/: autostart_tests.rs  connection_tests.rs  mod.rs  settings_tests.rs  startup_tests.rs  updater_tests.rs
src/theme/: colors.rs  css_vars.rs  mod.rs
src/ui/: add_key_dialog.rs  animated_dialog.rs  animation_utils.rs  app.rs  batch_ttl_dialog.rs  clients_panel.rs  clipboard.rs  connection_form.rs  connection_io_dialog.rs  context_menu.rs  delete_confirm_dialog.rs  delete_connection_confirm_dialog.rs  draggable_list.rs  editable_field.rs  export_dialog.rs  flat_tree_adapter.rs  flush_confirm_dialog.rs  icons.rs  import_panel.rs  java_viewer.rs  json_viewer.rs  key_actions.rs  key_browser.rs  key_item.rs  key_table.rs  lazy_data_table.rs  lazy_tree_node.rs  left_rail.rs  memory_analysis_dialog.rs  mod.rs  monitor_panel.css  monitor_panel.rs  pagination.rs  (+19 more)
test/: TEST_REPORT.md  docker-compose.yml  generate-certs.sh  init-test-data.sh  run-tests.sh  sentinel.conf  setup-ssh-forwarding.sh  setup-ssh-test.sh  start-all-services.sh  test-connections.sh  test-ssh-tunnel.sh  verify-results.sh
(+44 files in other folders)
