[package]
name = "rust-redis-desktop"
version = "0.1.0"
edition = "2021"

[dependencies]
# GUI
dioxus = { version = "0.7", features = ["desktop"] }
freya = "0.3"

# Async
tokio = { version = "1", features = ["full"] }

# Redis
redis = { version = "1", features = ["tokio-comp", "cluster", "cluster-async", "connection-manager"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
jaded = { version = "0.5", features = ["serde", "derive"] }

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Error handling
thiserror = "2"

# Utils
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
dirs = "6"
arboard = "3"
base64 = "0.22"

[dev-dependencies]
tokio-test = "0.4"

[[example]]
name = "test_config"
path = "examples/test_config.rs"
