[package]
name = "rust-redis-desktop"
version = "0.1.1-beta.3"
edition = "2021"

[dependencies]
# GUI
dioxus = { version = "0.7", features = ["desktop"] }
freya = "0.3"
tao = "0.34"

# Async
tokio = { version = "1", features = ["full"] }

# Redis
redis = { version = "1", features = ["tokio-comp", "cluster", "cluster-async", "connection-manager", "tokio-native-tls-comp"] }

# SSH tunnel
ssh2 = { version = "0.9", features = ["vendored-openssl"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
jaded = { version = "0.5", features = ["serde", "derive"] }

# Encryption
aes = "0.8"
cbc = "0.1"
rand = "0.9"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Error handling
thiserror = "2"

# Utils
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
dirs = "6"
arboard = "3"
base64 = "0.22"
rmp-serde = "1.3.1"
rmpv = "1.3"
serde-pickle = "1.2.0"
bson = "2"
ciborium = "0.2"
serde_yaml = "0.9"
toml = "0.8"
prost = "0.12"
prost-types = "0.12"
regex = "1"
urlencoding = "2.1"
flate2 = "1.0"
brotli = "7.0"
zstd = "0.13"
rfd = "0.17"
humansize = "2.1"
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "gif"] }
open = "5"
reqwest = { version = "0.12", features = ["json", "stream"] }
semver = "1"
sha2 = "0.10"
futures-util = "0.3"
zip = "2"
once_cell = "1.21.4"

# System tray (non-Linux platforms)
[target.'cfg(not(target_os = "linux"))'.dependencies]
tray-icon = "0.21"

[target.'cfg(target_os = "windows")'.dependencies]
winapi = "0.3"
winreg = "0.52"

[target.'cfg(target_os = "windows")'.build-dependencies]
winres = "0.1"

[dev-dependencies]
tokio-test = "0.4"
